# Jaut

./: .clang-format  .gitignore  .project  CMakeLists.txt  CODE_OF_CONDUCT.md  Jaut.jucer  README.md
.github/workflows/: cmake-multi-platform.yml  doxygen-gh-pages.yml
cmake/: CPM.cmake  CsvParser.cmake  Span.cmake
datasets/: CMakeLists.txt  jaut_dataset_locale.h.in
datasets/include/jaut_datasets/: jaut_dataset_locale.h
docs/: Doxyfile
docs/develop/: annotated.html  annotated_dup.js  classes.html  dir_00dd5e33939bc6f6bd132b3b7101acac.html  dir_00dd5e33939bc6f6bd132b3b7101acac.js  dir_0216fe4f489f08f61ed5d1846f66ecfb.html  dir_0216fe4f489f08f61ed5d1846f66ecfb.js  dir_05900d2674951e0e11b260a99153477d.html  dir_05900d2674951e0e11b260a99153477d.js  dir_11a0e60550d10c9dfe52c245796023e1.html  dir_11a0e60550d10c9dfe52c245796023e1.js  dir_1291ae0d22a6a602096dd38deb8ad37d.html  dir_1291ae0d22a6a602096dd38deb8ad37d.js  dir_13a661f10d188cc6ce1d90a182bd7461.html  dir_13a661f10d188cc6ce1d90a182bd7461.js  dir_15a2b8291f27876b9c35c9ccbd51ba83.html  dir_15a2b8291f27876b9c35c9ccbd51ba83.js  dir_1bc0211bc1df3d30c1c7b706397d6bc9.html  dir_1bc0211bc1df3d30c1c7b706397d6bc9.js  dir_1dd65a46d56ca1131b1cde30da5511bb.html  dir_461fdad51d5e6869512bff992f6b6f47.html  dir_461fdad51d5e6869512bff992f6b6f47.js  dir_488804bc1a01535820550c87bfd1a6bc.html  dir_49c37796df4595439fa83dbe9b6cb243.html  dir_49c37796df4595439fa83dbe9b6cb243.js  dir_532e934881b3a3439e41c91b1afc01ae.html  dir_53344810fe4b9cb749d3df688d6ef403.html  dir_53344810fe4b9cb749d3df688d6ef403.js  dir_62e42c2458477ad312f0927174de1476.html  dir_62e42c2458477ad312f0927174de1476.js  dir_66d3e7fa09c84e1aceef7cf33da4af82.html  dir_66d3e7fa09c84e1aceef7cf33da4af82.js  dir_6766b9e308e120c0e9618fbb94944187.html  dir_6766b9e308e120c0e9618fbb94944187.js  dir_67d4613f0851752d745371da7a568280.html  dir_67d4613f0851752d745371da7a568280.js  dir_71050eeb41244736cabb97591fcaaa42.html  dir_7a24ec680facef9fc483f1cd1a679496.html  dir_7a24ec680facef9fc483f1cd1a679496.js  dir_801282b3656f0ebdb8e8a656815fb566.html  (+131 more)
docs/develop/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_d.js  (+98 more)
docs/doxygen/: make.bat
docs/doxygen/resources/: Doxyfile  header.html
docs/reference/develop/: README_8md.html  annotated.html  annotated_dup.js  classes.html  classjaut_1_1AbstractLogger-members.html  classjaut_1_1AbstractLogger.html  classjaut_1_1AbstractLogger.js  classjaut_1_1AbstractLogger_1_1LogBuilder-members.html  classjaut_1_1AbstractLogger_1_1LogBuilder.html  classjaut_1_1AbstractLogger_1_1LogBuilder.js  classjaut_1_1AbstractLogger__inherit__graph.map  classjaut_1_1AbstractLogger__inherit__graph.md5  classjaut_1_1AtomicRingBuffer-members.html  classjaut_1_1AtomicRingBuffer.html  classjaut_1_1AtomicRingBuffer.js  classjaut_1_1AtomicRingBuffer__inherit__graph.map  classjaut_1_1AtomicRingBuffer__inherit__graph.md5  classjaut_1_1AudioProcessorRack-members.html  classjaut_1_1AudioProcessorRack.html  classjaut_1_1AudioProcessorRack.js  classjaut_1_1AudioProcessorRack__inherit__graph.map  classjaut_1_1AudioProcessorRack__inherit__graph.md5  classjaut_1_1AudioProcessorSet-members.html  classjaut_1_1AudioProcessorSet.html  classjaut_1_1AudioProcessorSet.js  classjaut_1_1AudioProcessorSet__inherit__graph.map  classjaut_1_1BasicLogger.js  (+966 more)
examples/: CMakeLists.txt  Config.cpp  GuiExamples.cpp  GuiExamples.h
examples/detail/: GuiBase.cpp  GuiBase.h
include/jaut/: appdata.h  audioprocessorrack.h  componentoptionlist.h  config.h  dspgui.h  dspunit.h  dspunitmanager.h  dynamicgui.h  exception.h  expo.h  fontformat.h  formatdictionary.h  guidspunitmanager.h  icomponentdrawing.h  iconfigparser.h  imessage.h  imessagebuffer.h  imetadata.h  imetareader.h  impls.h  ithemedefinition.h  jaut.h  localisation.h  lookandfeel.h  messagehandler.h  metadatahelper.h  propertyattribute.h  propertymap.h  serializableaudioprocessor.h  sfxunit.h  thememanager.h
modules/: CMakeLists.txt
modules/jaut_audio/: jaut_audio.cpp  jaut_audio.h
modules/jaut_core/: jaut_core.cpp  jaut_core.h
modules/jaut_dummy/: jaut_dummy.cpp  jaut_dummy.h
modules/jaut_gui/: jaut_gui.cpp  jaut_gui.h  jaut_gui_define.h
modules/jaut_internal/: expo.h  ext.cpp  jaut_format_attributes.h
modules/jaut_logger/: jaut_AbstractLogger.cpp  jaut_AbstractLogger.h  jaut_BasicLogger.h  jaut_FlushPolicy.h  jaut_LogLevel.h  jaut_LogMessage.h  jaut_logger.cpp  jaut_logger.h  jaut_logger_define.h
modules/jaut_message/: jaut_message.cpp  jaut_message.h
modules/jaut_provider/: jaut_provider.cpp  jaut_provider.h  jaut_provider_define.h
modules/jaut_reflect/: jaut_reflect.h  refldef.h
modules/jaut_util/: exception.h  fontformat.cpp  fontformat.h  jaut_util.cpp  jaut_util.h  metadatahelper.cpp  scopedcursor.h
modules/jaut_yaml/: yaml.h
resources/: banner.png-autosave.kra
src/: appdata.cpp  audioprocessorrack.cpp  componentoptionlist.cpp  config.cpp  configparser.cpp  dspgui.cpp  dspunit.cpp  dspunitmanager.cpp  dynamicgui.cpp  ext.cpp  fontformat.cpp  formatdictionary.cpp  guidspunitmanager.cpp  jaut_format_attributes.cpp  jaut_format_attributes.h  jaut_format_layout.cpp  jaut_format_layout.h  localisation.cpp  lookandfeel.cpp  metadatahelper.cpp  propertyattribute.cpp  propertymap.cpp  sfxunit.cpp  thememanager.cpp
test/: CMakeLists.txt
test/assets/localisation/: de_DE.lang  en_GB.lang
test/core/: Event.cpp  Numeric.cpp  Preprocessor.cpp  Stringable.cpp  TypeTraits.cpp  Version.cpp
test/logger/: Logger.cpp  LoggerFormat.cpp  LoggerSink.cpp
test/message/: MessageHandler.cpp
test/provider/: Config.cpp  Localisation.cpp
tools/: CMakeLists.txt
tools/jautgen/: CMakeLists.txt  main.cpp
(+1750 files in other folders)
